--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-10 mt-5">
                         <div class="home-title text-center">
-                            <h5 class="text-white-50 sub-title mb-3 font-weight-normal">Student</h5>
-                            <h1 class="display-3"><span class="element text-white" data-elements="Jayant Goel, Data Science and Machine Learning Enthusiast, MEAN Stack Developer, Android Developer,"></span></h1>
-                            <p class="text-light mx-auto para-desc">I am  Third-year student pursuing a Bachelor of Technology in Computer Science Engineering from Jaypee Institute Of Information Technology, <br> Sector 62 </p>
+                            <h5 class="text-white-50 sub-title mb-3 font-weight-normal disable-select">Student</h5>
+                            <h1 class="display-3">
+                                <span class="element text-white disable-select" data-elements="Jayant Goel, Data Science and Machine Learning Enthusiast, MEAN Stack Developer, Android Developer"></span>
+                            </h1>
+                            <p class="text-light mx-auto para-desc disable-select">I am  Third-year student pursuing a Bachelor of Technology in Computer Science Engineering from Jaypee Institute Of Information Technology, <br> Sector 62 </p>
                             <div class="mt-4 pt-2">
                                 <a target="_blank"
                                    href="https://drive.google.com/file/d/17F3ihdSCfMeGrfJsGTdfDxD-H5f6oiI0/view?usp=sharing"
@@ -475,7 +477,7 @@
         <div class="row container-grid projects-wrapper mt-4 pt-2">
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/aiicb.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -509,7 +511,7 @@
 
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -542,7 +544,7 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
@@ -557,7 +559,7 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="right" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
                         <img class="item-container img-fluid mx-auto" src="images/us.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
