--- a/index.html
+++ b/index.html
@@ -295,6 +295,17 @@
 
 </section>
 
+<section class="quote-section quote-hireme quote-img">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-7 text-center fadeInUp">
+                <h2 class="text-white">"If you want to shine like a sun, first burn like a sun."
+                </h2>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="section bg-light pointer" id="trainings">
     <div class="container">
         <div class="row justify-content-center">
