--- a/index.html
+++ b/index.html
@@ -300,8 +300,10 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-7 text-center fadeInUp">
-                <h2 class="text-white">"If you want to shine like a sun, first burn like a sun."
-                </h2>
+                <h2 class="disable-select">“Once a new technology rolls over you, if you're not part of the steamroller, you're part of the road.”</h2>
+                <br/>
+                <br/>
+                <h2 class="font-italic disable-select">-Stewart Brand, Writer</h2>
             </div>
         </div>
     </div>
