--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <h2 class="disable-select">“Once a new technology rolls over you, if you're not part of the steamroller, you're part of the road.”</h2>
                 <br/>
                 <br/>
-                <h2 class="font-italic disable-select">-Stewart Brand, Writer</h2>
+                <h2 class="font-italic disable-select">-Stewart Brand</h2>
             </div>
         </div>
     </div>
