--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -89,10 +88,10 @@
                                    class="btn btn-outline btn-round" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Resume</em></strong>">Download Resume <i class="fas fa-download ml-2"></i></a>
                             </div>
                             <div class="mouse">
-                            <a href="#" class="mouse-icon">
-                                <div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
-                            </a>
-                        </div>
+                                <a href="#about" class="mouse-icon">
+                                    <div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
