--- a/index.html
+++ b/index.html
@@ -590,6 +590,37 @@
     </div>
 </section>
 
+<section class="section pointer" id="achievements">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <div class="section-title text-center mb-4 pb-2">
+                    <div class="mb-5">
+                        <i class="mdi h1 mdi-trophy text-muted"></i>
+                    </div>
+                    <h3>My Achievements</h3>
+                    <p class="text-muted mx-auto mb-0 para-desc">Sample of some of my accomplishment.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="box">
+            <h2 class="name">6 ★ in Problem Solving with 3200+ points on HackerRank</h2>
+            <div class="circle"></div>
+            <img src="" class="ach-img"/>
+        </div><div class="box">
+        <h2 class="name">Won <strong>Hacktoberfest 2020</strong> T-shirt by creating more than <strong>20</strong> Pull Request.</h2>
+            <div class="circle"></div>
+            <img src="" class="ach-img"/>
+        </div><div class="box">
+        <h2 class="name">Secured <strong>1st</strong> Position among <strong>66 peers</strong> in Data Science Course.</h2>
+            <div class="circle"></div>
+            <img src="" class="ach-img"/>
+        </div>
+    </div>
+</section>
+
 <section class="section contact-wrapper bg-contact pointer" id="contact">
     <div id="particles-js2"></div>
     <div class="container">
