--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                     <a href="#portfolio" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Portfolio</em></strong>">Portfolio</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#achievements" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Achievement</em></strong>">Achievement</a>
+                </li>
+                <li class="nav-item">
                     <a href="#contact" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Contact</em></strong>">Contact</a>
                 </li>
             </ul>
@@ -426,7 +429,7 @@
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
                             <h5 class="mb-3">Python Bootcamp 2020 Build 15 Working Applications And Games </h5>
-                            <p class="text-muted mb-0">Online Course - Udemy</p>
+                            <p class="text-muted mb-0">Online Training - Udemy</p>
                             <p class="text-muted mb-0">15 Oct, 2020 - 27 Dec, 2020</p>
                         </div>
                     </div>
@@ -590,7 +593,7 @@
     </div>
 </section>
 
-<section class="section pointer" id="achievements">
+<section class="section pointer bg-light" id="achievements">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6">
@@ -603,20 +606,22 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="box">
-            <h2 class="name">6 ★ in Problem Solving with 3200+ points on HackerRank</h2>
-            <div class="circle"></div>
-            <img src="" class="ach-img"/>
-        </div><div class="box">
-        <h2 class="name">Won <strong>Hacktoberfest 2020</strong> T-shirt by creating more than <strong>20</strong> Pull Request.</h2>
-            <div class="circle"></div>
-            <img src="" class="ach-img"/>
-        </div><div class="box">
-        <h2 class="name">Secured <strong>1st</strong> Position among <strong>66 peers</strong> in Data Science Course.</h2>
-            <div class="circle"></div>
-            <img src="" class="ach-img"/>
+        <div class="container-ach">
+            <div class="box col-lg-4">
+                <h2 class="name">6 ★ in Problem Solving with 3200+ points on HackerRank</h2>
+                <div class="circle"></div>
+                <img src="images/aimg.png" class="ach-img"/>
+            </div>
+            <div class="box col-lg-4">
+                <h2 class="name">Won <strong>Hacktoberfest 2020</strong> T-shirt by creating more than <strong>20</strong> Pull Request.</h2>
+                <div class="circle"></div>
+                <img src="images/aimg.png" class="ach-img"/>
+            </div>
+            <div class="box col-lg-4">
+                <h2 class="name">Secured <strong>1st</strong> Position Among <strong>66 peers</strong> in Data Science Course.</h2>
+                <div class="circle"></div>
+                <img src="images/aimg.png" class="ach-img"/>
+            </div>
         </div>
     </div>
 </section>
