--- a/index.html
+++ b/index.html
@@ -610,17 +610,17 @@
             <div class="box col-lg-4">
                 <h2 class="name">6 ★ in Problem Solving with 3200+ points on HackerRank</h2>
                 <div class="circle"></div>
-                <img src="images/aimg.png" class="ach-img"/>
+                <img src="images/aimg.png" class="ach-img" alt=""/>
             </div>
             <div class="box col-lg-4">
                 <h2 class="name">Won <strong>Hacktoberfest 2020</strong> T-shirt by creating more than <strong>20</strong> Pull Request.</h2>
                 <div class="circle"></div>
-                <img src="images/aimg.png" class="ach-img"/>
+                <img src="images/aimg.png" class="ach-img" alt=""/>
             </div>
             <div class="box col-lg-4">
                 <h2 class="name">Secured <strong>1st</strong> Position Among <strong>66 peers</strong> in Data Science Course.</h2>
                 <div class="circle"></div>
-                <img src="images/aimg.png" class="ach-img"/>
+                <img src="images/aimg.png" class="ach-img" alt=""/>
             </div>
         </div>
     </div>
