--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                     <a href="#about" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>About</em></strong>">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#trainings" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Trainings</em></strong>">Trainings</a>
+                    <a href="#portfolio" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Portfolio</em></strong>">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#portfolio" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Portfolio</em></strong>">Portfolio</a>
+                    <a href="#trainings" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Trainings</em></strong>">Trainings</a>
                 </li>
                 <li class="nav-item">
                     <a href="#achievements" class="nav-link" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Achievement</em></strong>">Achievement</a>
@@ -311,7 +311,124 @@
         </div>
     </div>
 </section>
-<section class="section bg-light pointer" id="trainings">
+<section class="section pointer bg-light" id="portfolio">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <div class="section-title text-center mb-4 pb-2">
+                    <div class="mb-5">
+                        <i class="mdi mdi-image-filter h1 text-muted"></i>
+                    </div>
+                    <h3>My Portfolio</h3>
+                    <p class="text-muted mx-auto mb-0 para-desc">Sample of some of my projects</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row container-grid projects-wrapper mt-4 pt-2">
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                        <img class="item-container img-fluid mx-auto" src="images/aiicb.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>AI Image Caption Bot</h5>
+                                <p class="text-uppercase">
+                                    AI Image Caption Bot is a special project which uses almost every topic of data
+                                    science and Machine Learning. In this project, we can upload images and bot will
+                                    predict the caption of that image
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                        <img class="item-container img-fluid mx-auto" src="images/aimg.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>AI Music Generation</h5>
+                                <p class="text-uppercase">
+                                    In this project we were able to generates melodious sound of piano by mixing different nodes
+                                    and chords By training on LSTM Model.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                        <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>A School Donation Analysis</h5>
+                                <p class="text-uppercase">
+                                    Using School Donation Datasets,I was able to Analysed and Visualized using numpy and pandas & plotly, Cufflinks and Matplotlib respectively.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                        <img class="item-container img-fluid mx-auto" src="images/asm.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>A Social Media</h5>
+                                <p class="text-uppercase">
+                                    A Social Media Is an application developed with MEAN Stack Development. In this
+                                    application, you can make friends ,besties and enemy, allow user to share their
+                                    thoughts as post and can chat through one-to-one messages.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                        <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>E-Commerce Site</h5>
+                                <p class="text-uppercase">
+                                    Created An E-Commerce Site using Reactjs, REDUX, HTML, CSS and JavaScript where a user can buy product, add it to cart and added PayPal Button to make payment.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box m-2">
+                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
+                        <img class="item-container img-fluid mx-auto" src="images/us.png" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5>URL Shortner</h5>
+                                <p class="text-uppercase">
+                                    Created An Web Application which help us to shorten the URL by using Firebase Firestore as Database and Bootstrap for Front end.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<section class="section  pointer" id="trainings">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6">
@@ -476,123 +593,6 @@
     </div>
 </section>
 
-<section class="section pointer" id="portfolio">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-6">
-                <div class="section-title text-center mb-4 pb-2">
-                    <div class="mb-5">
-                        <i class="mdi mdi-image-filter h1 text-muted"></i>
-                    </div>
-                    <h3>My Portfolio</h3>
-                    <p class="text-muted mx-auto mb-0 para-desc">Sample of some of my projects</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row container-grid projects-wrapper mt-4 pt-2">
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/aiicb.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>AI Image Caption Bot</h5>
-                                <p class="text-uppercase">
-                                    AI Image Caption Bot is a special project which uses almost every topic of data
-                                    science and Machine Learning. In this project, we can upload images and bot will
-                                    predict the caption of that image
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/aimg.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>AI Music Generation</h5>
-                                <p class="text-uppercase">
-                                    In this project we were able to generates melodious sound of piano by mixing different nodes
-                                    and chords By training on LSTM Model.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>A School Donation Analysis</h5>
-                                <p class="text-uppercase">
-                                    Using School Donation Datasets,I was able to Analysed and Visualized using numpy and pandas & plotly, Cufflinks and Matplotlib respectively.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/asm.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>A Social Media</h5>
-                                <p class="text-uppercase">
-                                    A Social Media Is an application developed with MEAN Stack Development. In this
-                                    application, you can make friends ,besties and enemy, allow user to share their
-                                    thoughts as post and can chat through one-to-one messages.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>E-Commerce Site</h5>
-                                <p class="text-uppercase">
-                                    Created An E-Commerce Site using Reactjs, REDUX, HTML, CSS and JavaScript where a user can buy product, add it to cart and added PayPal Button to make payment.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-4 spacing branding designing development">
-                <div class="item-box m-2">
-                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>Click To Checkout My Code.</em></strong>">
-                        <img class="item-container img-fluid mx-auto" src="images/us.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>URL Shortner</h5>
-                                <p class="text-uppercase">
-                                    Created An Web Application which help us to shorten the URL by using Firebase Firestore as Database and Bootstrap for Front end.
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</section>
-
 <section class="section pointer bg-light" id="achievements">
     <div class="container">
         <div class="row justify-content-center">
@@ -602,7 +602,7 @@
                         <i class="mdi h1 mdi-trophy text-muted"></i>
                     </div>
                     <h3>My Achievements</h3>
-                    <p class="text-muted mx-auto mb-0 para-desc">Sample of some of my accomplishment.</p>
+                    <p class="text-muted mx-auto mb-0 para-desc">Some of my Accomplishment.</p>
                 </div>
             </div>
         </div>
