--- a/index.html
+++ b/index.html
@@ -593,42 +593,9 @@
     </div>
 </section>
 
-<!--<div class="codespaces-develop-container container-xl px-3 px-md-5-fluid text-center text-md-left py-12-fluid d-flex flex-column flex-md-row flex-items-center">-->
-<!--    <div class="position-relative col-5-max">-->
-<!--        <div style="width: 175px;" class="position-relative mb-6 mx-auto mx-md-0">-->
-<!--            <div class="codespaces-sun position-relative circle">-->
-<!--                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>-->
-<!--                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>-->
-<!--                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>-->
-<!--                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>-->
-<!--                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>-->
-<!--                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>-->
-<!--                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>-->
-<!--                <div class="codespaces-sun-stream z-1 d-block circle top-0 left-0 position-absolute"></div>-->
-<!--                <div class="codespaces-sun-circle z-2 circle position-absolute top-0-->
-<!--          left-0 height-full width-full"></div>-->
-<!--                <div class="codespaces-sun-circle-night z-2 circle position-absolute top-0-->
-<!--          left-0 height-full width-full"></div>-->
-<!--            </div>-->
+<div class="js-section-codespaces-develop section-codespaces-develop position-relative overflow-hidden z-3 section-codespaces-develop-night">
 
-<!--            <div class="codespaces-develop-time codespaces-develop-time-1 circle overflow-hidden position-absolute" style="left: 66px; top: -10px;"></div>-->
-<!--            <div class="codespaces-develop-time codespaces-develop-time-2 circle overflow-hidden position-absolute" style="left: 88px; top: -20px;"></div>-->
-<!--            <div class="codespaces-develop-time codespaces-develop-time-3 circle overflow-hidden position-absolute" style="left: 110px; top: -10px;"></div>-->
-
-<!--            <div class="codespaces-moon position-absolute top-0">-->
-<!--                <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>-->
-<!--                <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>-->
-<!--                <div class="codespaces-moon-dot z-1 d-block circle position-absolute"></div>-->
-<!--                <img src="https://github.githubassets.com/images/modules/site/codespaces/moon-dark.svg" alt="Moon" class="codespaces-moon-svg-dark position-absolute z-2" loading="lazy">-->
-<!--                <img src="https://github.githubassets.com/images/modules/site/codespaces/moon.svg" alt="Moon" class="codespaces-moon-svg position-absolute z-2" loading="lazy">-->
-<!--            </div>-->
-<!--        </div>-->
-
-<!--        <h1 class="h2-mktg-fluid mb-3-fluid codespaces-develop-header">Develop from anywhere, anytime</h1>-->
-<!--        <p class="codespaces-develop-text text-gray-light f2-mktg-fluid col-6-max mx-auto mx-md-0 mb-3-fluid">With your development in the cloud, you can contribute code from any&nbsp;device.</p>-->
-<!--    </div>-->
-<!--</div>-->
-
+</div>
 <section class="section pointer bg-light" id="achievements">
     <div class="container">
         <div class="row justify-content-center">
