--- a/index.html
+++ b/index.html
@@ -429,7 +429,9 @@
 </section>
 
 <section class="section pointer" id="trainings">
-    <div class="container">
+    <img src="images/footer-cloud.svg" class="cloud-bg">
+
+    <div class="container z-index">
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
@@ -597,7 +599,7 @@
 
 </div>
 <section class="section pointer bg-light" id="achievements">
-    <div class="container">
+    <div class="container z-index">
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
@@ -772,9 +774,6 @@
         max: 25,
         speed: 400
     });
-
-    //It also supports NodeList
-    // VanillaTilt.init(document.querySelectorAll(".your-element"));
 </script>
 </body>
 </html>
