--- a/index.html
+++ b/index.html
@@ -429,8 +429,7 @@
 </section>
 
 <section class="section pointer" id="trainings">
-    <img src="images/footer-cloud.svg" class="cloud-bg">
-
+    <img src="images/footer-cloud.svg" class="cloud-bg" alt="">
     <div class="container z-index">
         <div class="row justify-content-center">
             <div class="col-lg-6">
