--- a/index.html
+++ b/index.html
@@ -626,6 +626,7 @@
 
 <section class="section contact-wrapper bg-contact pointer" id="contact">
     <div id="particles-js2"></div>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6">
@@ -682,6 +683,12 @@
 </section>
 
 <footer class="footer bg-light">
+
+    <img class="crayons-footer__mascot"
+         alt="Sloan, the sloth mascot"
+         width="52" height="120"
+         src="https://res.cloudinary.com/practicaldev/image/fetch/s--4RkRuwpj--/c_limit,f_auto,fl_progressive,q_auto,w_100/https://dev-to-uploads.s3.amazonaws.com/i/wmv3mtusjwb3r13d5h2f.png"
+    >
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
