--- a/index.html
+++ b/index.html
@@ -683,8 +683,8 @@
 </section>
 
 <footer class="footer bg-light">
-    <a href="https://dev.to/jayantgoel001" target="_blank">
-        <img class="crayons-footer__mascot" alt="Sloan, the sloth mascot" width="52" height="120" src="images/monkey.png">
+    <a class="crayons-footer__mascot" href="https://dev.to/jayantgoel001" target="_blank">
+        <img alt="Sloan, the sloth mascot" width="52" height="120" src="images/monkey.png">
     </a>
     <div class="container">
         <div class="row">
