--- a/index.html
+++ b/index.html
@@ -683,9 +683,7 @@
 </section>
 
 <footer class="footer bg-light">
-    <a class="crayons-footer__mascot" href="https://dev.to/jayantgoel001" target="_blank">
-        <img alt="Sloan, the sloth mascot" width="52" height="120" src="images/monkey.png">
-    </a>
+    <img class="crayons-footer__mascot" alt="Sloan, the sloth mascot" width="52" height="120" src="images/monkey.png">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
