--- a/index.html
+++ b/index.html
@@ -683,7 +683,9 @@
 </section>
 
 <footer class="footer bg-light">
-    <img class="crayons-footer__mascot" alt="Sloan, the sloth mascot" width="52" height="120" src="images/monkey.png">
+    <a href="https://dev.to/jayantgoel001" target="_blank">
+        <img class="crayons-footer__mascot" alt="" width="52" height="120" src="images/monkey.png">
+    </a>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
