--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 </section>
 
 <footer class="footer bg-light">
-    <a href="https://dev.to/jayantgoel001" target="_blank">
+    <a href="https://dev.to/jayantgoel001" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>DEV</em></strong>">
         <img class="crayons-footer__mascot" alt="" width="52" height="120" src="images/monkey.png">
     </a>
     <div class="container">
