--- a/index.html
+++ b/index.html
@@ -683,8 +683,8 @@
 </section>
 
 <footer class="footer bg-light">
-    <a href="https://dev.to/jayantgoel001" target="_blank" data-toggle="tooltip" data-placement="left" data-html="true" title="<strong><em>DEV</em></strong>">
-        <img class="crayons-footer__mascot" alt="" width="52" height="120" src="images/monkey.png">
+    <a href="https://dev.to/jayantgoel001" target="_blank">
+        <img class="crayons-footer__mascot" alt="" width="52" height="120" src="images/monkey.png" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
     </a>
     <div class="container">
         <div class="row">
