--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="DC.title" content="Personal Portfolio" />
     <meta name="keywords" content="Jayant Goel Portfolio ♠ " />
     <meta name="author" content="Jayant Goel" />
+    <meta property="og:image" content="images/favicon.ico"/>
+    <base href="https://JayantGoel001.github.io/" target="_blank">
     <title>Jayant Goel ♠ </title>
 
     <link rel="shortcut icon" href="images/favicon.ico">
