--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta name="DC.title" content="Personal Portfolio" />
-    <meta name="keywords" content="Jayant Goel Portfolio ♠ " />
+    <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio ♠ " />
     <meta name="author" content="Jayant Goel" />
     <meta property="og:image" content="images/favicon.ico"/>
     <base href="https://JayantGoel001.github.io/" target="_blank">
