--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta name="DC.title" content="Personal Portfolio" />
-    <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio ♠ " />
+    <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer " />
     <meta name="author" content="Jayant Goel" />
     <meta property="og:image" content="images/favicon.ico"/>
-    <base href="https://JayantGoel001.github.io/" target="_blank">
-    <title>Jayant Goel ♠ </title>
 
+    <base href="https://JayantGoel001.github.io/" target="_blank">
+
+    <title>Jayant Goel ♠ </title>
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <!-- google font -->
