--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Jayant Goel" />
     <meta property="og:image" content="images/favicon.ico"/>
 
-    <base href="https://JayantGoel001.github.io/" target="_blank">
+<!--    <base href="https://JayantGoel001.github.io/" target="_blank">-->
 
     <title>Jayant Goel ♠ </title>
     <link rel="shortcut icon" href="images/favicon.ico">
