--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
@@ -750,8 +752,6 @@
 <script src="js/particles.js"></script>
 <script src="js/vanilla-tilt.js"></script>
 <script src="js/app.js"></script>
-<script>
 
-</script>
 </body>
 </html>
