--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
-    <meta name="DC.title" content="Personal Portfolio" />
+    <meta name="DC.title" content="Jayant Goel" />
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer " />
     <meta name="author" content="Jayant Goel" />
-    <meta property="og:image" content="images/favicon.ico"/>
+
+    <meta property="og:image" content="images/Profile-pic.jpg"/>
+    <meta property="og:title" content="Jayant Goel"/>
+    <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
+    <meta property="og:url" content="https://JayantGoel.github.io" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="images/bgimg.jpg" />
+    <meta name="twitter:title" content="Jayant Goel" />
+    <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
+    <meta name="twitter:image" content="images/Profile-pic.jpg"/>
 
 <!--    <base href="https://JayantGoel001.github.io/" target="_blank">-->
 
