--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer " />
     <meta name="author" content="Jayant Goel" />
 
-    <meta property="og:image" content="images/Profile-pic.jpg"/>
+    <meta property="og:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg"/>
     <meta property="og:title" content="Jayant Goel"/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta property="og:url" content="https://JayantGoel.github.io" />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="images/bgimg.jpg" />
+    <meta name="twitter:card" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/bgimg.jpg" />
     <meta name="twitter:title" content="Jayant Goel" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
-    <meta name="twitter:image" content="images/Profile-pic.jpg"/>
+    <meta name="twitter:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg"/>
 
 <!--    <base href="https://JayantGoel001.github.io/" target="_blank">-->
 
