--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://JayantGoel.github.io" />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="Portfolio" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jayant Goel" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
     <meta name="twitter:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg"/>
