--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                         <div class="text-center">
                             <div class="about-img mt-5 mb-5">
-                                <img src="images/Profile-pic.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle">
+                                <img src="images/Profile-pic.jpg" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle">
                             </div>
                             <h3 class="mb-3">Jayant Goel
                                 <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
@@ -438,7 +438,7 @@
 </section>
 
 <section class="section pointer" id="trainings">
-    <img src="images/footer-cloud.svg" class="cloud-bg" alt="">
+    <img src="images/footer-cloud.svg" class="cloud-bg" alt="Footer">
     <div class="container z-index">
         <div class="row justify-content-center">
             <div class="col-lg-6">
@@ -619,15 +619,15 @@
         <div class="container-ach">
             <div class="box col-lg-4">
                 <h2 class="name">6 ★ in Problem Solving with 3200+ points on HackerRank</h2>
-                <img src="images/HackerRank.png" class="ach-img" alt=""/>
+                <img src="images/HackerRank.png" class="ach-img" alt="HackerRank"/>
             </div>
             <div class="box col-lg-4">
                 <h2 class="name">Won <strong>Hacktoberfest 2020</strong> T-shirt by creating more than <strong>20</strong> Pull Request.</h2>
-                <img src="images/hacktoberfest2020.png" class="ach-img" alt=""/>
+                <img src="images/hacktoberfest2020.png" class="ach-img" alt="Hacktoberfest"/>
             </div>
             <div class="box col-lg-4">
                 <h2 class="name">Secured <strong>1st</strong> Position Among <strong>66 peers</strong> in Data Science Course.</h2>
-                <img src="images/data-science.svg" class="ach-img" alt=""/>
+                <img src="images/data-science.svg" class="ach-img" alt="Data Science"/>
             </div>
         </div>
     </div>
@@ -693,7 +693,7 @@
 
 <footer class="footer bg-light">
     <a href="https://dev.to/jayantgoel001" target="_blank">
-        <img class="crayons-footer__mascot" alt="" width="52" height="120" src="images/monkey.png" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
+        <img class="crayons-footer__mascot" alt="footer" width="52" height="120" src="images/monkey.png" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
     </a>
     <div class="container">
         <div class="row">
@@ -712,7 +712,7 @@
                             <a href="https://gist.github.com/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Gists</em></strong>"
                             >
-                                <img src="images/gist.png" width="20px" height="20px" alt="">
+                                <img src="images/gist.png" width="20px" height="20px" alt="gist">
                             </a>
                         </li>
                         <li class="list-inline-item">
