--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jayant Goel" />
     <meta name="twitter:description" content="Jayant Goel Personal Portfolio ♠ "/>
-    <meta name="twitter:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg"/>
+    <meta name="twitter:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg?raw=true"/>
 
 <!--    <base href="https://JayantGoel001.github.io/" target="_blank">-->
 
