--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer " />
     <meta name="author" content="Jayant Goel" />
 
-    <meta property="og:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg"/>
+    <meta property="og:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg?raw=true"/>
     <meta property="og:title" content="Jayant Goel"/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta property="og:url" content="https://JayantGoel.github.io" />
