--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg?raw=true"/>
     <meta property="og:title" content="Jayant Goel"/>
     <meta property="og:description" content="Jayant Goel Personal Portfolio ♠ " />
-    <meta property="og:url" content="https://JayantGoel.github.io" />
+    <meta property="og:url" content="https://jayantgoel001.github.io" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
