--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
             </div>
         </div>
     </div>
-    <p class="copyright-desc text-white mb-0 h6 p-2 mt-2" style="background-color: #242a35;text-align: center">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
+    <p class="copyright-desc text-white mb-0 h6 mt-2" style="background-color: #242a35;text-align: center;padding: 12px 0;font-family: sans-serif">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
 </footer>
 <!-- footer end -->
 
