--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />
 
+    <link href="css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
@@ -759,6 +761,10 @@
 <!-- custom -->
 <script src="js/particles.js"></script>
 <script src="js/vanilla-tilt.js"></script>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.fireworks.js"></script>
+
 <script src="js/app.js"></script>
 
 </body>
