--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </section>
 
 <section class="section " id="about">
-    <div class="container">
+    <div class="container" id="image-firework">
         <div class="row justify-content-center">
             <div class="col-lg-6 pointer">
                 <div class="section-title text-center mb-4 pb-2">
@@ -303,7 +303,6 @@
             </div>
         </div>
     </div>
-
 </section>
 
 <section class="quote-section quote-hireme quote-img">
@@ -762,8 +761,8 @@
 <script src="js/particles.js"></script>
 <script src="js/vanilla-tilt.js"></script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.fireworks.js"></script>
+<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
+<!--<script type="text/javascript" src="js/jquery.fireworks.js"></script>-->
 
 <script src="js/app.js"></script>
 
