--- a/index.html
+++ b/index.html
@@ -761,8 +761,8 @@
 <script src="js/particles.js"></script>
 <script src="js/vanilla-tilt.js"></script>
 
-<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
-<!--<script type="text/javascript" src="js/jquery.fireworks.js"></script>-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.fireworks.js"></script>
 
 <script src="js/app.js"></script>
 
