--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />
 
-    <link href="css/jquerysctipttop.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -107,7 +106,8 @@
 </section>
 
 <section class="section " id="about">
-    <div class="container" id="image-firework">
+    <div id="image-firework"></div>
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 pointer">
                 <div class="section-title text-center mb-4 pb-2">
@@ -761,10 +761,8 @@
 <script src="js/particles.js"></script>
 <script src="js/vanilla-tilt.js"></script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.fireworks.js"></script>
 
 <script src="js/app.js"></script>
-
 </body>
 </html>
