--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/colors/default.css" id="color-opt" />
 
-
 </head>
 
 <body>
@@ -106,6 +105,7 @@
 </section>
 
 <section class="section " id="about">
+    <div id="dir-background"></div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-6 pointer">
@@ -761,6 +761,5 @@
 <script src="js/vanilla-tilt.js"></script>
 
 <script src="js/app.js"></script>
-
 </body>
 </html>
