--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="description" content="Jayant Goel Personal Portfolio ♠ " />
     <meta name="DC.title" content="Jayant Goel" />
-    <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer " />
+    <meta name="keyword" content="Jayant Goel, Jayant Goel Portfolio, developer, JayantGoel001" />
     <meta name="author" content="Jayant Goel" />
 
     <meta property="og:image" content="https://github.com/JayantGoel001/JayantGoel001.github.io/blob/master/images/Profile-pic.jpg?raw=true"/>
