--- a/index.html
+++ b/index.html
@@ -690,8 +690,8 @@
 </section>
 
 <footer class="footer bg-light">
-    <a aria-label="image" href="https://dev.to/jayantgoel001" target="_blank" class="crayons-footer__mascot">
-        <img  alt="footer" width="52" height="120" src="images/monkey.png" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
+    <a aria-label="dev-image" href="https://dev.to/jayantgoel001" target="_blank" class="crayons-footer__mascot" data-toggle="tooltip" data-placement="bottom" data-html="true" title="<strong><em>DEV</em></strong>">
+        <img  alt="footer" width="52" height="120" src="images/monkey.png"/>
     </a>
     <div class="container">
         <div class="row">
@@ -710,7 +710,7 @@
                             <a aria-label="image" href="https://gist.github.com/JayantGoel001/" target="_blank"
                                data-toggle="tooltip" data-placement="top" data-html="true" title="<strong><em>Gists</em></strong>"
                             >
-                                <img src="images/gist.png" width="20px" height="20px" alt="gist">
+                                <img src="images/gist.png" width="20px" height="20px" alt="gist"/>
                             </a>
                         </li>
                         <li class="list-inline-item">
