--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
-
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
@@ -744,7 +744,7 @@
             </div>
         </div>
     </div>
-    <p class="copyright-desc text-white mb-0 h6 mt-2" style="background-color: #242a35;text-align: center;padding: 12px 0;font-family: sans-serif">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
+    <p class="copyright-desc text-white mb-0 h6 mt-2" style="background-color: #242a35;text-align: center;padding: 12px 0">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
 </footer>
 <!-- footer end -->
 
