--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
 <section class="section " id="about">
     <div id="dir-background"></div>
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center txt-bg txt-bg-about">
             <div class="col-lg-6 pointer">
                 <div class="section-title text-center mb-4 pb-2">
-                    <div class="mb-5">
+                    <div class="mb-5 pb-3">
                         <i class="mdi mdi-account-settings h1 text-muted"></i>
                     </div>
-                    <h3>About me</h3>
-                    <p class="text-muted mx-auto mb-0 para-desc">Experience, technologies and background.</p>
+                    <h3 class="txt-fg">About me</h3>
+                    <p class="text-muted mx-auto mb-0 mt-4 para-desc">Experience, technologies and background.</p>
                 </div>
             </div>
         </div>
@@ -320,10 +320,10 @@
 
 <section class="section pointer bg-light" id="portfolio">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center txt-bg txt-bg-portfolio">
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
-                    <div class="mb-5">
+                    <div class="mb-5 pb-3">
                         <i class="mdi mdi-image-filter h1 text-muted"></i>
                     </div>
                     <h3>My Portfolio</h3>
@@ -438,13 +438,13 @@
 <section class="section pointer" id="trainings">
     <img src="images/footer-cloud.svg" class="cloud-bg" alt="Footer">
     <div class="container z-index">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center txt-bg txt-bg-training">
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
-                    <div class="mb-5">
+                    <div class="mb-5 pb-3">
                         <i class="mdi mdi-all-inclusive h1 text-muted"></i>
                     </div>
-                    <h3>Trainings</h3>
+                    <h3>My Training</h3>
                     <p class="text-muted mx-auto mb-0 para-desc">Certifications and Work Profile</p>
                 </div>
             </div>
@@ -603,10 +603,10 @@
 
 <section class="section pointer bg-light" id="achievements">
     <div class="container z-index">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center txt-bg txt-bg-achievement">
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
-                    <div class="mb-5">
+                    <div class="mb-5 pb-3">
                         <i class="mdi h1 mdi-trophy text-muted"></i>
                     </div>
                     <h3>My Achievements</h3>
@@ -635,10 +635,10 @@
     <div id="particles-js2"></div>
 
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center txt-bg txt-bg-contact">
             <div class="col-lg-6">
                 <div class="section-title text-center mb-4 pb-2">
-                    <div class="mb-5">
+                    <div class="mb-5 pb-3">
                         <i class="mdi mdi-headphones h1"></i>
                     </div>
                     <h3 class="text-white">Contact me</h3>
