--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                         <i class="mdi mdi-map-marker text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0" style="color: white"
+                        <p class="mb-0" style="color: white;font-size: 16px"
                         >Ghaziabad, Uttar Pradesh, India</p>
                     </div>
                 </div>
@@ -668,8 +668,8 @@
                         <i class="mdi mdi-phone-classic text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0"><a aria-label="image" href="tel:+91-8377838183" style="color: white">+91-8377838183</a></p>
-                        <p class="mb-0"><a aria-label="image" href="tel:+91-8076331756" style="color: white">+91-8076331756</a></p>
+                        <p class="mb-0"><a aria-label="image" href="tel:+91-8377838183" style="color: white;font-size: 16px">+91-8377838183</a></p>
+                        <p class="mb-0"><a aria-label="image" href="tel:+91-8076331756" style="color: white;font-size: 16px">+91-8076331756</a></p>
                     </div>
                 </div>
             </div>
@@ -681,7 +681,7 @@
                         <i class="mdi mdi-email-outline text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0"><a aria-label="image" href="mailto: jgoel92@gmail.com" style="color: white">jgoel92@gmail.com</a></p>
+                        <p class="mb-0"><a aria-label="image" href="mailto: jgoel92@gmail.com" style="color: white;font-size: 16px">jgoel92@gmail.com</a></p>
                     </div>
                 </div>
             </div>
