--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <title>Jayant Goel ♠ </title>
     <link rel="shortcut icon" href="images/favicon.ico">
-
+    <link rel="manifest" href="assets/"/>
     <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <!-- Bootstrap core CSS -->
