--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <title>Jayant Goel ♠ </title>
     <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="manifest" href="assets/manifest.json"/>
+    <link rel="manifest" href="manifest.json"/>
     <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <!-- Bootstrap core CSS -->
@@ -131,7 +131,7 @@
                     <div class="tab-pane fade show active" id="story" role="tabpanel" aria-labelledby="story-tab">
                         <div class="text-center">
                             <div class="about-img mt-5 mb-5">
-                                <img src="images/Profile-pic.jpg" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle">
+                                <img src="images/Profile-pic.png" alt="Profile Image" class="img-fluid mx-auto d-block rounded-circle">
                             </div>
                             <h3 class="mb-3">Jayant Goel
                                 <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
