--- a/index.html
+++ b/index.html
@@ -757,6 +757,6 @@
 <script src="js/particles.js"></script>
 <script src="js/vanilla-tilt.js"></script>
 
-<script src="js/app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
